# CommandaStructures

./: .clang-format  .gitignore  CMakeLists.txt  README.md  comment.clang-format
.github/workflows/: clang-auto-format.yml  format-comments.yml
examples/: deque_example.cpp  doublelinkedlist_example.cpp  iterators_example.cpp  linkedlist_example.cpp  queue_example.cpp  ringbuffer_example.cpp  stack_example.cpp
include/: deque.h  doublelinkedlist.h  linkedlist.h  node.h  nodes.h  queue.h  ringbuffer.h  stack.h
src/: main.cpp  test_iterators.cpp
